WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210777
Fix build failures when video fullscreen and picture-in-picture is disabled
https://bugs.webkit.org/show_bug.cgi?id=210777
Summary
Fix build failures when video fullscreen and picture-in-picture is disabled
Peng Liu
Reported
2020-04-20 17:55:36 PDT
Fix build failures when video fullscreen and picture-in-picture is disabled
Attachments
Patch
(25.93 KB, patch)
2020-04-20 18:10 PDT
,
Peng Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-04-20 17:57:12 PDT
<
rdar://problem/62085074
>
Peng Liu
Comment 2
2020-04-20 18:10:45 PDT
Created
attachment 397044
[details]
Patch
Eric Carlson
Comment 3
2020-04-20 19:04:49 PDT
Comment on
attachment 397044
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=397044&action=review
> Source/JavaScriptCore/Configurations/FeatureDefines.xcconfig:378 > -ENABLE_VIDEO_PRESENTATION_MODE = ENABLE_VIDEO_PRESENTATION_MODE; > +ENABLE_VIDEO_PRESENTATION_MODE = $(ENABLE_VIDEO_PRESENTATION_MODE_$(WK_PLATFORM_NAME)); > +ENABLE_VIDEO_PRESENTATION_MODE_iphoneos = ENABLE_VIDEO_PRESENTATION_MODE; > +ENABLE_VIDEO_PRESENTATION_MODE_watchos = ENABLE_VIDEO_PRESENTATION_MODE; > +ENABLE_VIDEO_PRESENTATION_MODE_macosx = ENABLE_VIDEO_PRESENTATION_MODE;
As we discussed, this may not be necessary but we can remove it later if possible.
EWS
Comment 4
2020-04-20 21:06:16 PDT
Committed
r260412
: <
https://trac.webkit.org/changeset/260412
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 397044
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug