Source/WebCore/platform/graphics/avfoundation/objc/VideoLayerManagerObjC.mm
@@ -66,14 +66,19 @@ void VideoLayerManagerObjC::setVideoLayer(PlatformLayer *videoLayer, IntSize con
     if ([videoLayer isKindOfClass:PAL::getAVPlayerLayerClass()])
         [m_videoInlineLayer setPlayerLayer:(AVPlayerLayer *)videoLayer];
 
+#if ENABLE(VIDEO_PRESENTATION_MODE)
     if (m_videoFullscreenLayer) {
         [m_videoLayer setFrame:CGRectMake(0, 0, m_videoFullscreenFrame.width(), m_videoFullscreenFrame.height())];
         [m_videoFullscreenLayer insertSublayer:m_videoLayer.get() atIndex:0];
-    } else {
+    } else
+#endif
+    {
         [m_videoInlineLayer insertSublayer:m_videoLayer.get() atIndex:0];
         [m_videoLayer setFrame:m_videoInlineLayer.get().bounds];
     }
 }
+
+#if ENABLE(VIDEO_PRESENTATION_MODE)
 
 void VideoLayerManagerObjC::updateVideoFullscreenInlineImage(NativeImagePtr image)
 {
@@ -140,6 +145,8 @@ void VideoLayerManagerObjC::setVideoFullscreenFrame(FloatRect videoFullscreenFra
     syncTextTrackBounds();
 }
 
+#endif
+
 void VideoLayerManagerObjC::didDestroyVideoLayer()
 {
     ALWAYS_LOG(LOGIDENTIFIER);
@@ -152,11 +159,16 @@ void VideoLayerManagerObjC::didDestroyVideoLayer()
 
 bool VideoLayerManagerObjC::requiresTextTrackRepresentation() const
 {
+#if ENABLE(VIDEO_PRESENTATION_MODE)
     return m_videoFullscreenLayer;
+#else
+    return false;
+#endif
 }
 
 void VideoLayerManagerObjC::syncTextTrackBounds()
 {
+#if ENABLE(VIDEO_PRESENTATION_MODE)
     if (!m_videoFullscreenLayer || !m_textTrackRepresentationLayer)
         return;
 
@@ -169,10 +181,14 @@ void VideoLayerManagerObjC::syncTextTrackBounds()
     [m_textTrackRepresentationLayer setFrame:m_videoFullscreenFrame];
 
     [CATransaction commit];
+#endif
 }
 
 void VideoLayerManagerObjC::setTextTrackRepresentation(TextTrackRepresentation* representation)
 {
+#if !ENABLE(VIDEO_PRESENTATION_MODE)
+    UNUSED_PARAM(representation);
+#else
     ALWAYS_LOG(LOGIDENTIFIER);
 
     PlatformLayer* representationLayer = representation ? representation->platformLayer() : nil;
@@ -195,6 +211,7 @@ void VideoLayerManagerObjC::setTextTrackRepresentation(TextTrackRepresentation* 
     }
 
     [CATransaction commit];
+#endif
 }
 
 WTFLogChannel& VideoLayerManagerObjC::logChannel() const
